fix (all) gap-columns

--- a/assets/style.css
+++ b/assets/style.css
@@ -119,6 +119,7 @@ button:hover{
 .container-flex{
     display: flex;
     gap: 20px;
+    justify-content: center;
 }
 
 .large-container h2{
@@ -149,7 +150,7 @@ button:hover{
 }
 
 .large-container .card{ 
-    width: calc(100% / 3 - 20px);
+    width: calc(100% / 3);
     border: 1px solid lightgrey; 
 }
 
@@ -293,6 +294,7 @@ header{
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
+    justify-content: center;
 }
 
 .mini-article figure{
@@ -444,7 +446,7 @@ header{
 }
 
 .large-container .menu{
-    width: calc(100% / 5 - 20px);
+    width: calc(100% / 5);
 }
 
 .large-container .menu ul li{
